1999-07-16    <redman@scriptics.com>

	* unix/aclocal.m4:
	* unix/tcl.m4:  Add check for Alpha/Linux to correct the IEEE
	floating flag to the compiler, should be -mieee.  Patch from Don
	Porter.
	
	* tools/tcl.hpj.in: Change version number of .cnt file referenced
	in .HPJ file.

1999-07-15    <redman@scriptics.com>
	
	* tools/tcl.wse.in: Fixed naming of target files for Windows.

1999-07-14    <jpeek@scriptics.com>

	* doc/re_syntax.n: Deleted sentence as suggested by Scott S.

1999-07-12    <jpeek@scriptics.com>

	* doc/re_syntax.n: Removed two notes to myself (oops), cleaned
	up wording, fixed changebars, made two examples easier to read.

1999-07-11    <redman@scriptics.com>

	* win/makefile.vc: Since the makefile.vc should continue to work
	while we're working out bugs/issues in the new TEA-style
	autoconf/configure/gmake build mechanism for Windows, the version
	numbers of the Tcl libraries need to remain in sync.  Modified the
	version numbers in the makefile to reflect the change to 8.2b1.

1999-07-09    <redman@scriptics.com>

	* win/configure.in: Eval DLLSUFFIX, LIBSUFFIX, and EXESUFFIX in
	the configure script so that substitutions get expanded before
	being placed in the Makefile.  The "d" portion for debug libraries
	and DLLs was not being set properly.
	
1999-07-08    <stanton@scriptics.com>

	* tests/string.test: 
	* generic/tclCmdMZ.c: Fixed bug in string range bounds checking
	code.

1999-07-08  Jennifer Hom  <jenn@scriptics.com>

	* doc/tcltest.n:
	* library/tcltest1.0/tcltest.tcl: Removed -asidefromdir and
	-relateddir flags, removed unused ::tcltest::dotests proc, cleaned
	up implementation of core file checking, and fixed the code that
	checks for 1-letter flag abbreviations.

1999-07-08    <stanton@scriptics.com>

	* win/Makefile.in: Added tcltest target so runtest works
	properly.  Added missing names to the clean/distclean targets.

	* tests/reg.test: 
	* generic/rege_dfa.c: Applied fix supplied by Henry Spencer for